# spiral-wallpaper

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md
.claude/: launch.json
.github/workflows/: build.yml
assets/: spiral-brand-guide.html
spiral-wallpaper/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
spiral-wallpaper/scripts/: check-hex.mjs  make-dmg-background.py  make-nsis-images.py
spiral-wallpaper/src/: App.tsx  main.tsx  updates.ts
spiral-wallpaper/src-tauri/: Cargo.toml  tauri.conf.json
spiral-wallpaper/src-tauri/icons/: icon.icns
spiral-wallpaper/src-tauri/src/: cache.rs  lib.rs  main.rs  net.rs  pexels.rs  setter.rs  settings.rs  smoke.rs  unsplash.rs  wallhaven.rs
spiral-wallpaper/src-tauri/windows/: hooks.nsh
spiral-wallpaper/src/components/: Toggle.tsx  WallpaperTile.tsx
spiral-wallpaper/src/dev/: tauri-mock.ts
spiral-wallpaper/src/screens/: Browse.tsx  FirstRun.tsx  Settings.tsx
spiral-wallpaper/src/settings/: api.ts
spiral-wallpaper/src/sources/: index.ts  types.ts  wallhaven.ts
spiral-wallpaper/src/styles/: app.css  base.css  tokens.css
